feat: update book endpoint
