# pkg/controller/book/new.go
@@ -14,6 +14,7 @@ type Controller interface {
 	GetBooks(ctx context.Context, q model.ListQuery) (*model.ListResult[model.Book], error)
 	CreateBook(ctx context.Context, book model.CreateBookRequest) (*model.Book, error)
 	DeleteBook(ctx context.Context, ID int) error
+	UpdateBook(ctx context.Context, book model.UpdateBookRequest) (*model.Book, error)
 }
 
 type impl struct {
